--- a/app/src/main/res/layout/activity_all_sites.xml
+++ b/app/src/main/res/layout/activity_all_sites.xml
@@ -6,18 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".AllSitesActivity">
 
-    <ListView
-        android:id="@+id/all_sites_listview"
-        android:layout_width="368dp"
-        android:layout_height="495dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+
+    <ExpandableListView
+        android:id="@+id/lvExp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </ExpandableListView>
+
 </android.support.constraint.ConstraintLayout>
