Makes request for site grades and displays.

--- a/app/src/main/res/layout/course_list_item.xml
+++ b/app/src/main/res/layout/course_list_item.xml
@@ -8,12 +8,11 @@
     android:orientation="horizontal">
 
     <ImageView
-        android:paddingTop="8dp"
-        android:paddingLeft="10dp"
         android:id="@+id/lblListItemImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_gear"/>
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:paddingLeft="10dp"
+        android:paddingTop="8dp" />
 
 
     <TextView
