--- a/app/src/main/res/layout/fragment_site_grades.xml
+++ b/app/src/main/res/layout/fragment_site_grades.xml
@@ -4,8 +4,8 @@
     android:layout_height="match_parent">
 
     <ListView
-        android:id="@+id/sites_list_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
+        android:id="@+id/site_grades_list_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"></ListView>
 
 </android.support.constraint.ConstraintLayout>
