--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="colorPrimary">#D93434</color>
     <color name="colorPrimaryDark">#8F1717</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#8F1717</color>
     <color name="white">#FFFFFF</color>
 </resources>
