--- a/app/src/main/res/layout/course_list_item_home.xml
+++ b/app/src/main/res/layout/course_list_item_home.xml
@@ -8,7 +8,7 @@
     android:orientation="horizontal">
 
     <ImageView
-        android:id="@+id/lblListItemImage"
+        android:id="@+id/course_icon"
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:paddingLeft="10dp"
@@ -16,7 +16,7 @@
 
 
     <TextView
-        android:id="@+id/lblListItemText"
+        android:id="@+id/course_name_text"
         android:layout_width="271dp"
         android:layout_height="38dp"
         android:layout_marginEnd="8dp"
@@ -33,7 +33,7 @@
         android:textSize="20dip"
         app:layout_constraintEnd_toStartOf="@+id/arrow_image"
         app:layout_constraintHorizontal_bias="0.611"
-        app:layout_constraintStart_toEndOf="@+id/lblListItemImage"
+        app:layout_constraintStart_toEndOf="@+id/course_icon"
         app:layout_constraintTop_toTopOf="parent" />
 
 
@@ -46,7 +46,7 @@
         android:paddingTop="8dp"
         android:src="@drawable/ic_keyboard_arrow"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/lblListItemText"
+        app:layout_constraintStart_toEndOf="@+id/course_name_text"
         app:layout_constraintTop_toTopOf="parent" />
 
 
