--- a/app/src/main/res/layout/term_list_group.xml
+++ b/app/src/main/res/layout/term_list_group.xml
@@ -5,7 +5,7 @@
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/lblListHeader"
+        android:id="@+id/term_header_group"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
