--- a/app/src/main/res/layout/grade_list_item_site.xml
+++ b/app/src/main/res/layout/grade_list_item_site.xml
@@ -23,7 +23,7 @@
     <TextView
         android:id="@+id/txt_grade"
         android:layout_width="97dp"
-        android:layout_height="29dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
