--- a/app/src/main/res/layout/fragment_all_grades.xml
+++ b/app/src/main/res/layout/fragment_all_grades.xml
@@ -1,7 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <ProgressBar
+        android:visibility="visible"
+        android:id="@+id/all_grades_spinner"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/all_grades_listview"
+        app:layout_constraintStart_toStartOf="@+id/all_grades_listview"
+        app:layout_constraintTop_toTopOf="@+id/all_grades_listview" />
 
     <ExpandableListView
         android:id="@+id/all_grades_listview"
