Added fontawesome to project, with custom style for textviews that need it

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,9 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="FontawesomeText" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="android:fontFamily">@font/fontawesome</item>
+        <item name="android:paddingTop">4dp</item>
+    </style>
+
 </resources>
