Lots of styling and tree behavior stuff

--- a/app/src/main/res/layout/assignment_node_layout.xml
+++ b/app/src/main/res/layout/assignment_node_layout.xml
@@ -9,8 +9,8 @@
         android:id="@+id/assignment_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/white"
-        android:textColor="@android:color/black"
+        android:background="@color/leaf_background"
+        android:textColor="@color/sakai_light_black"
         tools:text="Assignment 2018"
         android:textSize="16sp"
         android:paddingLeft="64dp"
