--- a/app/src/main/res/layout/course_header_layout.xml
+++ b/app/src/main/res/layout/course_header_layout.xml
@@ -9,8 +9,8 @@
         android:id="@+id/course_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/black"
-        android:textColor="@android:color/white"
+        android:background="@color/sakai_light_silver"
+        android:textColor="@color/sakai_light_black"
         tools:text="Course 2018"
         android:textStyle="bold"
         android:textSize="18sp"
