--- a/app/src/main/res/layout/term_header_layout.xml
+++ b/app/src/main/res/layout/term_header_layout.xml
@@ -9,8 +9,8 @@
         android:id="@+id/term_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#B0C4DE"
-        android:textColor="@android:color/holo_red_dark"
+        android:background="@color/sakai_medium_red"
+        android:textColor="@color/sakai_medium_silver"
         tools:text="Spring 2018"
         android:textStyle="bold"
         android:textSize="24sp"
