--- a/app/src/main/res/layout/course_header_layout.xml
+++ b/app/src/main/res/layout/course_header_layout.xml
@@ -3,13 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/sakai_light_silver"
+    android:foreground="?android:attr/selectableItemBackground">
 
     <TextView
         android:id="@+id/course_name"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/sakai_light_silver"
         android:textColor="@color/sakai_light_black"
         tools:text="Course 2018"
         android:textStyle="bold"
@@ -17,6 +18,14 @@
         android:paddingLeft="32dp"
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
-        android:paddingRight="8dp"/>
+        android:paddingRight="8dp"
+        android:layout_weight="1"
+        android:maxLines="1"/>
+
+    <TextView
+        android:id="@+id/arrow_image"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        style="@style/FontawesomeText.Course" />
 
 </LinearLayout>
