some UI improvements and made course serializable

--- a/app/src/main/res/layout/gradeitem_node.xml
+++ b/app/src/main/res/layout/gradeitem_node.xml
@@ -8,13 +8,18 @@
     android:orientation="horizontal">
 
     <TextView
+        android:background="@color/leaf_background"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:textColor="@color/sakai_light_black"
         android:id="@+id/txt_assignment_name"
         android:layout_width="260dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:paddingBottom="10dp"
-        android:paddingLeft="40dp" />
+        android:paddingBottom="8dp"
+        android:paddingLeft="40dp"
+        android:textSize="16sp"
+        android:paddingTop="8dp"/>
     
     <View
         android:layout_width="0dp"
@@ -22,9 +27,13 @@
         android:layout_weight="1"/>
 
     <TextView
+        android:textSize= "16sp"
+        android:background="@color/leaf_background"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:textColor="@color/sakai_light_black"
         android:id="@+id/txt_grade"
         android:layout_width="wrap_content"
-        android:layout_height="20dp"
+        android:layout_height="fill_parent"
         android:gravity="right"
         android:layout_marginRight="8dp"
         />
