--- a/app/src/main/res/layout/gradeitem_node.xml
+++ b/app/src/main/res/layout/gradeitem_node.xml
@@ -38,7 +38,7 @@
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
         android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
+        android:layout_height="match_parent"
         android:gravity="right"
         android:layout_marginRight="8dp"
         />
