--- a/app/src/main/res/layout/course_header_layout.xml
+++ b/app/src/main/res/layout/course_header_layout.xml
@@ -8,19 +8,26 @@
     android:foreground="?android:attr/selectableItemBackground">
 
     <TextView
+        android:id="@+id/course_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight=".05"
+         />
+
+    <TextView
         android:id="@+id/course_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textColor="@color/sakai_light_black"
-        tools:text="Course 2018"
-        android:textStyle="bold"
-        android:textSize="18sp"
-        android:paddingLeft="32dp"
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp"
-        android:paddingRight="8dp"
         android:layout_weight="1"
-        android:maxLines="1"/>
+        android:maxLines="1"
+        android:paddingBottom="8dp"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
+        android:paddingTop="8dp"
+        android:textColor="@color/sakai_light_black"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        tools:text="Course 2018" />
 
     <TextView
         android:id="@+id/arrow_image"
