--- a/app/src/main/res/layout/course_header_layout.xml
+++ b/app/src/main/res/layout/course_header_layout.xml
@@ -9,10 +9,10 @@
 
     <TextView
         android:id="@+id/course_icon"
-        android:layout_width="wrap_content"
+        style="@style/CourseIcons"
+        android:layout_width="20dp"
         android:layout_height="wrap_content"
-        android:layout_weight=".05"
-         />
+        android:layout_weight=".05" />
 
     <TextView
         android:id="@+id/course_name"
