--- a/app/src/main/res/layout/fragment_course_assignments.xml
+++ b/app/src/main/res/layout/fragment_course_assignments.xml
@@ -5,11 +5,13 @@
     tools:context="com.example.development.sakaiclientandroid.fragments.assignments.CourseAssignmentsFragment">
 
     <!-- View pager for swiping through the assignments -->
+    <!-- It has a transparent background to support the raised
+        feel of the CardView-->
     <android.support.v4.view.ViewPager
         android:id="@+id/assignment_viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="16dp">
+        android:background="@color/white">
 
     </android.support.v4.view.ViewPager>
 
