--- a/app/src/main/res/layout/fragment_single_assignment.xml
+++ b/app/src/main/res/layout/fragment_single_assignment.xml
@@ -1,14 +1,161 @@
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.development.sakaiclientandroid.fragments.assignments.SingleAssignmentFragment">
 
-    <TextView
-        android:id="@+id/assignment_name"
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_margin="24dp"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="24dp"
+        app:cardPreventCornerOverlap="true">
 
-</android.support.v7.widget.CardView>
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:id="@+id/header"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/sakai_medium_red"
+                android:orientation="vertical"
+                android:paddingBottom="16dp"
+                android:paddingLeft="12dp"
+                android:paddingRight="12dp"
+                android:paddingTop="48dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <TextView
+                    android:id="@+id/assignment_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="4dp"
+                    android:layout_marginRight="32dp"
+                    android:maxLines="2"
+                    android:textColor="@color/sakai_light_silver"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    tools:text="Programming Assignment 1: Introduction to C" />
+
+                <TextView
+                    android:id="@+id/assignment_date"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/sakai_light_silver"
+                    android:textSize="12sp"
+                    tools:text="Due: Feb 15, 2018 11:55 pm" />
+
+            </LinearLayout>
+
+            <ScrollView
+                android:id="@+id/body"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/header"
+                app:layout_constraintVertical_bias="0.0">
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <TableLayout
+                        android:id="@+id/table_body"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="8dp">
+
+                        <TableRow android:layout_marginBottom="4dp">
+
+                            <TextView
+                                android:layout_width="135dp"
+                                android:text="Status" />
+
+                            <TextView
+                                android:id="@+id/assignment_status"
+                                android:layout_width="0dp"
+                                android:layout_gravity="end"
+                                android:layout_weight="1"
+                                android:textAlignment="textEnd"
+                                tools:text="Due Tomorrow" />
+                        </TableRow>
+
+                        <TableRow android:layout_marginBottom="4dp">
+
+                            <TextView android:text="Max Points" />
+
+                            <TextView
+                                android:id="@+id/assignment_max_grade"
+                                android:layout_width="0dp"
+                                android:layout_gravity="end"
+                                android:layout_weight="1"
+                                android:textAlignment="textEnd"
+                                tools:text="100" />
+                        </TableRow>
+
+                        <TableRow android:layout_marginBottom="4dp">
+
+                            <TextView android:text="Current Grade" />
+
+                            <TextView
+                                android:id="@+id/assignment_curr_grade"
+                                android:layout_width="0dp"
+                                android:layout_gravity="end"
+                                android:layout_weight="1"
+                                android:textAlignment="textEnd"
+                                tools:text="95" />
+                        </TableRow>
+
+                        <TableRow android:layout_marginBottom="4dp">
+
+                            <TextView android:text="Allows Resubmissions" />
+
+                            <TextView
+                                android:id="@+id/assignment_allows_resubmission"
+                                android:layout_width="0dp"
+                                android:layout_gravity="end"
+                                android:layout_weight="1"
+                                android:textAlignment="textEnd"
+                                tools:text="Yes" />
+                        </TableRow>
+
+                    </TableLayout>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:textSize="18sp"
+                        android:textStyle="bold"
+                        android:text="Instructions"/>
+
+                    <TextView
+                        android:id="@+id/assignment_description"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:textSize="12sp" />
+
+                </LinearLayout>
+
+            </ScrollView>
+
+
+        </android.support.constraint.ConstraintLayout>
+
+    </android.support.v7.widget.CardView>
+
+</FrameLayout>
+
+
