--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -1,29 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/navigation_home"
         android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:title="@string/title_home"
+        app:showAsAction="withText"/>
 
     <item
         android:id="@+id/navigation_announcements"
         android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_announcements" />
+        android:title="@string/title_announcements"
+        app:showAsAction="withText"/>
 
     <item
         android:id="@+id/navigation_assignments"
         android:icon="@drawable/ic_assignments"
-        android:title="@string/title_assignments"/>
+        android:title="@string/title_assignments"
+        app:showAsAction="withText"/>
 
     <item
         android:id="@+id/navigation_gradebook"
         android:icon="@drawable/ic_book"
-        android:title="@string/title_gradebook"/>
+        android:title="@string/title_gradebook"
+        app:showAsAction="withText"/>
 
     <item
         android:id="@+id/navigation_settings"
         android:icon="@drawable/ic_gear"
-        android:title="@string/title_settings"/>
+        android:title="@string/title_settings"
+        />
 
 </menu>
