Added fading transition with transparent background

--- a/app/src/main/res/layout/assignment_cell_layout.xml
+++ b/app/src/main/res/layout/assignment_cell_layout.xml
@@ -19,6 +19,7 @@
 
         <!-- Header -->
         <LinearLayout
+            android:id="@+id/card_header"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
