--- a/app/src/main/res/drawable/tab_indicator_default.xml
+++ b/app/src/main/res/drawable/tab_indicator_default.xml
@@ -6,7 +6,7 @@
             android:shape="ring"
             android:thickness="3dp"
             android:useLevel="false">
-            <solid android:color="@android:color/darker_gray"/>
+            <solid android:color="@android:color/white"/>
         </shape>
     </item>
 </layer-list>
