--- a/app/src/main/res/layout/gradeitem_node.xml
+++ b/app/src/main/res/layout/gradeitem_node.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.LinearLayoutCompat
-    android:background="@color/leaf_background"
+<android.support.v7.widget.LinearLayoutCompat android:background="@color/leaf_background"
     android:foreground="?android:attr/selectableItemBackground"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="48dp"
     android:orientation="horizontal">
