changed primary color to be less saturated

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#D93434</color>
+    <color name="colorPrimary">#d34646</color>
     <color name="colorPrimaryDark">#8F1717</color>
     <color name="colorAccent">#8F1717</color>
     <color name="white">#FFFFFF</color>
