--- a/app/src/main/res/layout/fragment_course_assignments.xml
+++ b/app/src/main/res/layout/fragment_course_assignments.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.development.sakaiclientandroid.fragments.assignments.CourseAssignmentsFragment">
+    tools:context="com.example.development.sakaiclientandroid.fragments.assignments.SiteAssignmentsFragment">
 
     <!-- View pager for swiping through the assignments -->
     <android.support.v4.view.ViewPager
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="#80000000" />
+        android:background="#FFFFFF" />
 
     <android.support.design.widget.TabLayout
         android:id="@+id/view_pager_indicators"
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:background="#80000000"
+        android:background="#FFFFFF"
         app:tabIndicatorHeight="0dp"
         app:tabBackground="@drawable/tab_selector"
         app:tabGravity="center" />
