Added dynamic permission requests for writing to external storage

--- a/app/src/main/res/layout/fragment_assignment_submission_dialog.xml
+++ b/app/src/main/res/layout/fragment_assignment_submission_dialog.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:activity="com.example.development.sakaiclientandroid.fragments.assignments.AssignmentSubmissionDialogFragment">
+    tools:fragment="com.example.development.sakaiclientandroid.fragments.assignments.AssignmentSubmissionDialogFragment">
 
     <LinearLayout
         android:orientation="vertical"
