--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -7,6 +7,8 @@
     tools:context=".SettingsActivity">
 
     <android.support.v7.widget.Toolbar
+        android:text="@string/title_settings"
+        app:titleTextColor="@color/white"
         app:navigationIcon="?attr/homeAsUpIndicator"
         android:id="@+id/settings_toolbar"
         android:background="?attr/colorPrimary"
