Fixed fading animation on scrolling away from assignment

--- a/app/src/main/res/layout/fragment_single_assignment.xml
+++ b/app/src/main/res/layout/fragment_single_assignment.xml
@@ -11,7 +11,7 @@
         android:layout_margin="12dp"
         app:cardCornerRadius="4dp"
         app:cardPreventCornerOverlap="true"
-        android:elevation="12dp"
+        app:cardUseCompatPadding="true"
         android:padding="12dp">
 
         <RelativeLayout
