--- a/app/src/main/res/layout/fragment_course_assignments.xml
+++ b/app/src/main/res/layout/fragment_course_assignments.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="#FFFFFF" />
+        android:background="#80000000" />
 
     <android.support.design.widget.TabLayout
         android:id="@+id/view_pager_indicators"
@@ -20,7 +20,8 @@
         android:layout_height="wrap_content"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:background="#FFFFFF"
+        android:background="#80000000
+"
         app:tabIndicatorHeight="0dp"
         app:tabBackground="@drawable/tab_selector"
         app:tabGravity="center" />
