Fixed data races with AsyncTask and app crashing on file download

--- a/app/src/main/res/layout/fragment_web.xml
+++ b/app/src/main/res/layout/fragment_web.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     tools:fragment="com.example.development.sakaiclientandroid.fragments.WebFragment">
 
-    <com.example.development.sakaiclientandroid.utils.ui_components.webview.FileCompatWebView
+    <com.example.development.sakaiclient20.ui.custom_components.FileCompatWebView
         android:id="@+id/data_webview"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
