Re-vamped AllCourseFragment to be entirely self contained :)

--- a/app/src/main/res/layout/refreshable_treeview_fragment.xml
+++ b/app/src/main/res/layout/refreshable_treeview_fragment.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <FrameLayout
-        android:id="@+id/assignments_container"
+        android:id="@+id/treeview_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -15,7 +15,7 @@
     </FrameLayout>
 
     <ProgressBar
-        android:id="@+id/assignments_progressbar"
+        android:id="@+id/progressbar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
